--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:value="1" />
         <meta-data
             android:name="AA_MODELS"
-            android:value="com.chesscomparser.alexdevyatov.chesscomparser.model.Country" />
+            android:value="com.chesscomparser.alexdevyatov.chesscomparser.model.Country,
+                com.chesscomparser.alexdevyatov.chesscomparser.model.Player" />
 
         <activity android:name=".MainActivity">
             <intent-filter>
