--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.facebook.fresco:fresco:1.13.0'
 
     // retrofit
     implementation "com.squareup.retrofit2:retrofit:2.3.0"
